refactor: update PaymentService to use reactive patterns and remove unused RedisTemplate